Set durch List ersetzt